# doom-patrol

./: .gitignore  Cargo.toml  Dockerfile  README.md  Rocket.toml  compose.yaml
.github/workflows/: docker.yml  hydra.yml  init.yml  sidecar.yml
bootstrap/stage0/: cluster.yml
bootstrap/stage1/: crd.tf  efs.tf  main.tf
bootstrap/stage2/: config.tf  control-plane.tf  deployment.tf  main.tf  protocol-parameters.json  rbac.tf  secret.tf
docker/: dockerfile.hydra  dockerfile.init  dockerfile.sidecar  entrypoint.sh
playbook/: main.tf  pod.yml
playbook/dev/: main.tf
playbook/main/: main.tf
src/: config.rs  context.rs  controller.rs  custom_resource.rs  error.rs  k8s.rs  lib.rs
src/model/: node.rs
src/routes/: global.rs  head.rs  heads.rs  new_game.rs
