[package]
name = "doom_patrol"
version = "0.1.0"
edition = "2021"

[dependencies]
k8s-openapi = { version = "0.23.0", features = ["latest"] }
kube = { version = "0.96.0", features = ["client"] }
rocket = { version = "0.5.1", features = ["json"] }
rocket_cors = "0.6.0"
serde = { version = "1.0.203", features = ["rc"] }
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["full"] }
tokio-native-tls = "0.3.1"
tracing = "0.1.40"
uuid = { version = "1.11.0", features = ["v4"] }

[profile.release]
debug = true
